--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,28 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+@import url('./1-timer.css');
+@import url('./2-snackbar.css');
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+body {
+  margin-left: 40px;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+.main-title {
+  font-size: 25px;
+  font-weight: 600;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.main-item {
+  list-style: auto;
+  padding-bottom: 20px;
+}
+
+.main-item a {
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.main-item a:hover {
+  text-decoration-line: underline;
 }
